--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="img/favicon.ico">
 
-    <title>Whats new - Teachbase хахатон</title>
+    <title>Whats new - Teachbase</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/dist/bootstrap.min.css" rel="stylesheet">
@@ -100,15 +100,11 @@
                       <div class="full-story collapse" id="collapseExample">
                         <article>
                           <div class="title">Сводный отчёт для мастер аккаунта<span class="status-bar orange">исследуем</span></div>
-                          <div class="content">
-                            Может, вы не знали, у нас есть мастер-аккаунты, из которых можно управлять всеми дочерними аккаунтами и курсами. Мы работаем над сводным отчётом, который показывает статистику по всем слэйв-аккаунтам в одном *.xlsx файле.
-                          </div>
+                          <div class="content">Мы создали супер-пупер мастер-аккаунт, из-под которого можно управлять всеми дочерними (по-нашему, слэйв) аккаунтами. А теперь еще добавим сводный отчет, который будет показывать статистику по всем слэйв-аккаунтам в одном *.xlsx файле.</div>
                         </article>
                         <article class="soon">
                           <div class="title">Еженедельные отчеты на почту<span class="status-bar blue">в дизайне</span></div>
-                          <div class="content">
-                            Teachbase собирает огромные массивы данных и строит статистику по разным параметрам. Всё это можно посмотреть и выгрузить в личном кабинете менеджера. Каждый понедельник только нужные цифры о процессе обучения на вашу почту. Получил, посмотрел, что всё идет по плану. Что-то не так - пнул кого нужно и
-                          </div>
+                          <div class="content">Teachbase собирает огромные массивы данных и строит статистику по разным параметрам. Всё это можно посмотреть и выгрузить в личном кабинете менеджера. Каждый понедельник только нужные цифры о процессе обучения на вашу почту. Получил, посмотрел, что всё идет по плану. Что-то не так - пнул кого нужно.</div>
                         </article>
                         <article class="soon">
                           <div class="title">Изменение уже отправленной оценки<span class="status-bar green">в разработке</span></div>
@@ -118,18 +114,13 @@
                         </article>
                         <article class="soon">
                           <div class="title">Управление email уведомлениями<span class="status-bar green">в разработке</span></div>
-                          <div class="content">
-                            Вы достаточно настрадались. Teachbase отправляет множество уведомлений о разных действиях и изменениях. Кому-то жизненно необходимо следить за каждым чихом, кому-то только за ответами учеников, а самому главному вообще достаточно только счет получать. Скоро сможете управлять уведомлениями и их периодичностью.
-                          </div>
+                          <div class="content">Вы достаточно настрадались. Teachbase отправляет множество уведомлений о разных действиях и изменениях. Кому-то жизненно необходимо следить за каждым чихом, кому-то только за ответами учеников, а самому главному вообще достаточно только счет получать. Скоро сможете управлять уведомлениями и их периодичностью.</div>
                         </article>
                       </div>
                       <a class="see-full-story" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample"></a>
                     </div>
                   </div>
                 </div>
-                <!-- <div class="timeline-panel">
-                  <div class="timeline-body"></div>
-                </div> -->
               </li>
             </ul>
           </div>
@@ -151,30 +142,30 @@
                 <div class="timeline-panel card-columns">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#улучшили</span> Скачивание оригинального документа в курсе</h5>
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Скачивание оригинального документа в курсе</h5>
                       <img class="card-img-top" alt="text" src="img/gif/download_inital_file.gif">
-                      <p class="card-text">Для скачивания перейдите в содержание курса, нажмите на материал и нажмите на значок редактирования. В окне редактирования будет ссылка "открыть исходник" при нажатии на которую произойдет скачивание материала.</p>
+                      <p class="card-text">Организаторы курса могут скачивать оригинал загруженного материала курса</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#новьё</span> Регистрация пользователя в курс через лендинг Tilda.cc</h5>
-                      <p class="card-text">Теперь стало можно через страницу на Tilda регистрировать пользователя в аккаунт, назначать ему курс и привязывать к факту оплаты</p>
+                      <h5 class="card-title">🚀 <span>#новьё</span> Регистрация учеников с красивых лэндингов на Tilda</h5>
+                      <p class="card-text">Теперь можно сверстать красивую внешнюю страницу на тильде и прямо с нее регистрировать учеников в Teachbase (c предварительной оплатой или без — решать вам)</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🐛 <span>#улучшили</span> Больше XLSX отчётов</h5>
-                      <p class="card-text">Сделали XLSX отчёты по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Больше отчетов</h5>
+                      <p class="card-text">Переделали формат выгрузки отчетов из *.сsv курильщика в *.xlsx нормального человека: по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#улучшили</span> Отдельные карточки для программ</h5>
-                      <p class="card-text">Для интерфейса слушателя полностью переработали отображение программ на странице активных курсов.</p>
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Отображение карточек программ обучения</h5>
+                      <p class="card-text">В интерфейсе слушателя полностью переработали отображение программ на странице активных курсов.</p>
                     </div>
                   </div>
                 </div>
@@ -195,30 +186,50 @@
                 <div class="timeline-panel card-columns">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
-                      <img class="card-img-top" data-src="holder.js/100px160/" alt="100%x160" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22266%22%20height%3D%22160%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20266%20160%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16a2ca32693%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A13pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16a2ca32693%22%3E%3Crect%20width%3D%22266%22%20height%3D%22160%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2299.7578125%22%20y%3D%2286%22%3E266x160%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="height: 260px; width: 100%; display: block; margin-bottom: .75rem;">
-                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <h5 class="card-title">🚀 <span>#новьё</span> Форум</h5>
+                      <p class="card-text">Новое пространство для общения учеников между собой и с организаторами обучения. Для включения функционала календаря, пожалуйста, обратитесь в техническую поддержку - <a href="mailto:help@teachbase.ru">help@teachbase.ru</a>.</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Бодрые карточки</h5>
-                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      <h5 class="card-title">🚀 <span>#новьё</span> Мобильное приложение Android</h5>
+                        <p class="card-text">Выпустили долгожданное мобильное приложение под Android для слушателей Teachbase. Теперь проходить обучение можно со своего любимого смартфона — это удобно, эффективно и можно заниматься, где угодно.</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🐛 <span>#починили</span> Бодрые карточки</h5>
-                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Доступ к папкам в библиотеке</h5>
+                      <p class="card-text">Если у вас были папки в библиотеке с приватным доступом для определенной группы, то теперь, добавляя новых пользователей в эту группу, не нужно вручную им выдавать доступ - он откроется автоматически.</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#новьё</span> Бодрые карточки</h5>
-                      <p class="card-text">Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире! Мы следим за бодростью карточек курсов каждый день и вводим возможность делать самые бодрые карточки в мире!</p>
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Email Напоминания о событиях</h5>
+                      <p class="card-text">Вставили *.ics файлы в письма-напоминания о событиях. Открывается в вашем календаре и автоматически ставит напоминалку о событии. </p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Загрузку SCORM</h5>
+                      <p class="card-text">При создании SCORM материала, добавили автоматическую загрузку SCROM пакета. SCORM должен быть запакован в zip и размер файла должен не превышать 2GB.</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Новые Email уведомления</h5>
+                      <p class="card-text">учеников об офлайн мероприятии</p>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">🔧 <span>#улучшили</span> Интеграцию с Active Directory</h5>
+                      <p class="card-text">Добавили поддержку Azure Active Directory</p>
                     </div>
                   </div>
                 </div>
@@ -276,7 +287,7 @@
           </div>
         </div>
 
-  </main><!-- /.container -->
+    </main><!-- /.container -->
 
   <!-- Bootstrap core JavaScript
   ================================================== -->
