--- a/index.html
+++ b/index.html
@@ -236,11 +236,12 @@
               </li>
             </ul>
           
-            <ul class="timeline d-none">
+            <ul class="timeline">
               <li class="timeline-inverted">
-                <div class="timeline-title">
-                  <h4>февраль</h4>
-                </div>
+                  <div class="timeline-title d-flex justify-content-between">
+                    <h4>февраль</h4>
+                    <div class="last-updated">Последнее обновление 24 февраля</div>
+                  </div>
                 <div class="timeline-badge">
                   <span style="font-size: 0.9em; color: #000; top: -16px; position: absolute; left: 3px; color: #000;">
                     <i class="fas fa-check"></i>
@@ -249,7 +250,10 @@
                 <div class="timeline-panel">
                   <div class="timeline-emoji">🌋</div>
                   <div class="timeline-subtitle">5 фичей, 3 фикса и краткий анонс что это такое</div>
-                  <div class="timeline-body d-none">
+                  <span class="position-absolute" style="font-size: 3em; color: #dedede; position: absolute; top: 42px; right: 30px; color: #000;">
+                      <a style="color: #dedede" class="see-full-story fas fa-caret-square-down" data-toggle="collapse" href="#collapseFeb" role="button" aria-expanded="false" aria-controls="collapseFeb"></a>
+                  </span>
+                  <div class="timeline-body collapse" id="collapseFeb">
                     <div class="card-columns">
                       <div class="card">
                         <div class="card-body">
