--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="timeline-panel card-columns">
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Скачивание оригинального документа в курсе</h5>
+                      <h5 class="card-title">🔧 Скачивание оригинального документа в курсе <span>#улучшили</span></h5>
                       <img class="card-img-top" alt="text" src="img/gif/download_inital_file.gif">
                       <p class="card-text">Организаторы курса могут скачивать оригинал загруженного материала курса</p>
                     </div>
@@ -150,21 +150,21 @@
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#новьё</span> Регистрация учеников с красивых лэндингов на Tilda</h5>
+                      <h5 class="card-title">🚀 Регистрация учеников с красивых лэндингов на Tilda <span>#новьё</span></h5>
                       <p class="card-text">Теперь можно сверстать красивую внешнюю страницу на тильде и прямо с нее регистрировать учеников в Teachbase (c предварительной оплатой или без — решать вам)</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Больше отчетов</h5>
+                      <h5 class="card-title">🔧 Больше отчетов <span>#улучшили</span></h5>
                       <p class="card-text">Переделали формат выгрузки отчетов из *.сsv курильщика в *.xlsx нормального человека: по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Отображение карточек программ обучения</h5>
+                      <h5 class="card-title">🔧 Отображение карточек программ обучения <span>#улучшили</span></h5>
                       <p class="card-text">В интерфейсе слушателя полностью переработали отображение программ на странице активных курсов.</p>
                     </div>
                   </div>
@@ -183,60 +183,70 @@
                     <i class="fas fa-check"></i>
                   </span>
                 </div>
-                <div class="timeline-panel card-columns">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#новьё</span> Форум</h5>
-                      <p class="card-text">Новое пространство для общения учеников между собой и с организаторами обучения. Для включения функционала календаря, пожалуйста, обратитесь в техническую поддержку - <a href="mailto:help@teachbase.ru">help@teachbase.ru</a>.</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🚀 <span>#новьё</span> Мобильное приложение Android</h5>
-                        <p class="card-text">Выпустили долгожданное мобильное приложение под Android для слушателей Teachbase. Теперь проходить обучение можно со своего любимого смартфона — это удобно, эффективно и можно заниматься, где угодно.</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Доступ к папкам в библиотеке</h5>
-                      <p class="card-text">Если у вас были папки в библиотеке с приватным доступом для определенной группы, то теперь, добавляя новых пользователей в эту группу, не нужно вручную им выдавать доступ - он откроется автоматически.</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Email Напоминания о событиях</h5>
-                      <p class="card-text">Вставили *.ics файлы в письма-напоминания о событиях. Открывается в вашем календаре и автоматически ставит напоминалку о событии. </p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Загрузку SCORM</h5>
-                      <p class="card-text">При создании SCORM материала, добавили автоматическую загрузку SCROM пакета. SCORM должен быть запакован в zip и размер файла должен не превышать 2GB.</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Новые Email уведомления</h5>
-                      <p class="card-text">учеников об офлайн мероприятии</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">🔧 <span>#улучшили</span> Интеграцию с Active Directory</h5>
-                      <p class="card-text">Добавили поддержку Azure Active Directory</p>
+                <div class="timeline-panel">
+                  <div class="timeline-emoji">🌋</div>
+                  <div class="timeline-subtitle">2 фичи, 5 улучшений, разворачивай и читай</div>
+                  <span class="position-absolute" style="font-size: 3em; color: #dedede; position: absolute; top: 42px; right: 30px; color: #000;">
+                      <a style="color: #dedede" class="see-full-story fas fa-caret-square-down" data-toggle="collapse" href="#collapseFeb" role="button" aria-expanded="false" aria-controls="collapseFeb"></a>
+                  </span>
+                  <div class="timeline-body collapse" id="collapseFeb">
+                    <div class="card-columns">
+
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🚀 Форум <span>#новьё</span></h5>
+                          <p class="card-text">Новое пространство для общения учеников между собой и с организаторами обучения. Для включения функционала календаря, пожалуйста, обратитесь в техническую поддержку - <a href="mailto:help@teachbase.ru">help@teachbase.ru</a>.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🚀 Мобильное приложение Android <span>#новьё</span></h5>
+                            <p class="card-text">Выпустили долгожданное мобильное приложение под Android для слушателей Teachbase. Теперь проходить обучение можно со своего любимого смартфона — это удобно, эффективно и можно заниматься, где угодно.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 Доступ к папкам в библиотеке <span>#улучшили</span></h5>
+                          <p class="card-text">Если у вас были папки в библиотеке с приватным доступом для определенной группы, то теперь, добавляя новых пользователей в эту группу, не нужно вручную им выдавать доступ - он откроется автоматически.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 Email Напоминания о событиях <span>#улучшили</span></h5>
+                          <p class="card-text">Вставили *.ics файлы в письма-напоминания о событиях. Открывается в вашем календаре и автоматически ставит напоминалку о событии. </p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 Загрузку SCORM <span>#улучшили</span></h5>
+                          <p class="card-text">При создании SCORM материала, добавили автоматическую загрузку SCROM пакета. SCORM должен быть запакован в zip и размер файла должен не превышать 2GB.</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 Новые Email уведомления <span>#улучшили</span></h5>
+                          <p class="card-text">учеников об офлайн мероприятии</p>
+                        </div>
+                      </div>
+                      <hr>
+                      <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">🔧 Интеграцию с Active Directory <span>#улучшили</span></h5>
+                          <p class="card-text">Добавили поддержку Azure Active Directory</p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </li>
             </ul>
           
-            <ul class="timeline">
+            <!-- <ul class="timeline">
               <li class="timeline-inverted">
                   <div class="timeline-title d-flex justify-content-between">
                     <h4>февраль</h4>
@@ -287,7 +297,7 @@
                   </div>
                 </div>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
 
