--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
                       <div class="short-story">
                           <article>
                             <div class="content">
-                              Наша команда активно трудится над сводным отчётом, выгрузкой в XLS, трампампам и ещё вот этим вот так.
+                              Наша команда активно трудится над сводным и еженедельным отчётом, выгрузкой в XLSX и управлением email уведомлений.
                             </div>
                           </article>
                       </div>
                       <div class="full-story collapse" id="collapseExample">
                         <article>
-                          <div class="title">Сводный отчёт для мастер аккаунта<span class="status-bar orange">исследуем</span></div>
+                          <div class="title">Сводный отчёт для мастер аккаунта<span class="status-bar green">в разработке</span></div>
                           <div class="content">Мы создали супер-пупер мастер-аккаунт, из-под которого можно управлять всеми дочерними (по-нашему, слэйв) аккаунтами. А теперь еще добавим сводный отчет, который будет показывать статистику по всем слэйв-аккаунтам в одном *.xlsx файле.</div>
                         </article>
                         <article class="soon">
-                          <div class="title">Еженедельные отчеты на почту<span class="status-bar blue">в дизайне</span></div>
+                          <div class="title">Еженедельные отчеты на почту<span class="status-bar purpule">тестируем</span></div>
                           <div class="content">Teachbase собирает огромные массивы данных и строит статистику по разным параметрам. Всё это можно посмотреть и выгрузить в личном кабинете менеджера. Каждый понедельник только нужные цифры о процессе обучения на вашу почту. Получил, посмотрел, что всё идет по плану. Что-то не так - пнул кого нужно.</div>
                         </article>
                         <article class="soon">
-                          <div class="title">Изменение уже отправленной оценки<span class="status-bar green">в разработке</span></div>
+                          <div class="title">Изменение уже отправленной оценки<span class="status-bar purpule">тестируем</span></div>
                           <div class="content">
                             При проверка заданий поставили не ту оценку или комментарий? Не проблема! Добавим возможность их отредактировать. 
                           </div>
                         </article>
                         <article class="soon">
-                          <div class="title">Управление email уведомлениями<span class="status-bar green">в разработке</span></div>
+                          <div class="title">Управление email уведомлениями<span class="status-bar orange">исследуем</span></div>
                           <div class="content">Вы достаточно настрадались. Teachbase отправляет множество уведомлений о разных действиях и изменениях. Кому-то жизненно необходимо следить за каждым чихом, кому-то только за ответами учеников, а самому главному вообще достаточно только счет получать. Скоро сможете управлять уведомлениями и их периодичностью.</div>
                         </article>
                       </div>
@@ -144,27 +144,29 @@
                     <div class="card-body">
                       <h5 class="card-title">🔧 Скачивание оригинального документа в курсе <span>#улучшили</span></h5>
                       <img class="card-img-top" alt="text" src="img/gif/download_inital_file.gif">
-                      <p class="card-text">Организаторы курса могут скачивать оригинал загруженного материала курса</p>
+                      <p class="card-text">Организаторы курса могут скачивать оригинал загруженного материала курса.</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title">🚀 Регистрация учеников с красивых лэндингов на Tilda <span>#новьё</span></h5>
-                      <p class="card-text">Теперь можно сверстать красивую внешнюю страницу на тильде и прямо с нее регистрировать учеников в Teachbase (c предварительной оплатой или без — решать вам)</p>
+                      <img class="card-img-top" alt="text" src="img/gif/tilda_cc.gif">
+                      <p class="card-text">Теперь можно сверстать красивую внешнюю страницу на тильде и прямо с нее регистрировать учеников в Teachbase (c предварительной оплатой или без — решать вам).</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title">🔧 Больше отчетов <span>#улучшили</span></h5>
-                      <p class="card-text">Переделали формат выгрузки отчетов из *.сsv курильщика в *.xlsx нормального человека: по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика"</p>
+                      <p class="card-text">Переделали формат выгрузки отчетов из *.сsv курильщика в *.xlsx нормального человека: по анкетам на странице "Заявки", группам на странице "Слушатели" и вопросам на странице "Статистика".</p>
                     </div>
                   </div>
                   <hr>
                   <div class="card">
                     <div class="card-body">
                       <h5 class="card-title">🔧 Отображение карточек программ обучения <span>#улучшили</span></h5>
+                      <img class="card-img-top" alt="text" src="img/gif/programs.gif">
                       <p class="card-text">В интерфейсе слушателя полностью переработали отображение программ на странице активных курсов.</p>
                     </div>
                   </div>
@@ -185,7 +187,7 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-emoji">🌋</div>
-                  <div class="timeline-subtitle">2 фичи, 5 улучшений, разворачивай и читай</div>
+                  <div class="timeline-subtitle">2 фичи, 5 улучшений — разворачиваем и читаем</div>
                   <span class="position-absolute" style="font-size: 3em; color: #dedede; position: absolute; top: 42px; right: 30px; color: #000;">
                       <a style="color: #dedede" class="see-full-story fas fa-caret-square-down" data-toggle="collapse" href="#collapseFeb" role="button" aria-expanded="false" aria-controls="collapseFeb"></a>
                   </span>
@@ -195,6 +197,7 @@
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🚀 Форум <span>#новьё</span></h5>
+                          <img class="card-img-top" alt="text" src="img/gif/forum.gif">
                           <p class="card-text">Новое пространство для общения учеников между собой и с организаторами обучения. Для включения функционала календаря, пожалуйста, обратитесь в техническую поддержку - <a href="mailto:help@teachbase.ru">help@teachbase.ru</a>.</p>
                         </div>
                       </div>
@@ -209,6 +212,7 @@
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🔧 Доступ к папкам в библиотеке <span>#улучшили</span></h5>
+                          <img class="card-img-top" alt="text" src="img/gif/share_for_group.gif">
                           <p class="card-text">Если у вас были папки в библиотеке с приватным доступом для определенной группы, то теперь, добавляя новых пользователей в эту группу, не нужно вручную им выдавать доступ - он откроется автоматически.</p>
                         </div>
                       </div>
@@ -216,7 +220,8 @@
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🔧 Email Напоминания о событиях <span>#улучшили</span></h5>
-                          <p class="card-text">Вставили *.ics файлы в письма-напоминания о событиях. Открывается в вашем календаре и автоматически ставит напоминалку о событии. </p>
+                          <img class="card-img-top" alt="text" src="img/gif/ics_calendar.gif">
+                          <p class="card-text">Вставили *.ics файлы в письма-напоминания о событиях. Открывается в вашем календаре и автоматически ставит напоминалку о событии.</p>
                         </div>
                       </div>
                       <hr>
@@ -230,14 +235,14 @@
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🔧 Новые Email уведомления <span>#улучшили</span></h5>
-                          <p class="card-text">учеников об офлайн мероприятии</p>
+                          <p class="card-text">Добавили уведомления учеников об офлайн мероприятиях.</p>
                         </div>
                       </div>
                       <hr>
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">🔧 Интеграцию с Active Directory <span>#улучшили</span></h5>
-                          <p class="card-text">Добавили поддержку Azure Active Directory</p>
+                          <p class="card-text">Добавили поддержку Azure Active Directory.</p>
                         </div>
                       </div>
                     </div>
