--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div class="position-absolute go-back">&larr;&nbsp;  <a href="https://teachbase.ru">Вернуться на главную</a></div>
         <div class="mx-auto">
           <div class="tb-logo mx-auto"></div>
-          <div class="updates-text">ОБНОВЛЕНИЯ</div>
+          <div class="updates-text">
+            <span>ОБНОВЛЕНИЯ</span>
+          </div>
         </div>
       </div>
 
